[package]
name = "heliosphere-core"
version = "0.3.0"
authors = ["alianse777"]
edition = "2021"
description = "Rust-idiomatic Tron API client library"
readme = "README.md"
license = "MIT"
keywords = ["tron", "blockchain", "api", "client", "cryptocurrency"]
categories = ["api-bindings"]
repository = "https://github.com/alianse777/heliosphere"

[features]
default = ["ethabi_compat"]
ethabi_compat = ["ethabi"]

[dependencies]
bs58 = { version = "0.5", default-features = false, features = [
    "alloc",
    "check",
] }
derive-new = { version = "0.6", default-features = false }
ethabi = { version = "18", default-features = false, features = [
    "serde",
], optional = true }
alloy-primitives = { version = "0.7", default-features = false }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = [
    "derive",
    "alloc",
] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
sha2 = { version = "0.10", default-features = false }
zerocopy = { version = "0.7", default-features = false }

[dev-dependencies]
hex-literal = "0.3.4"
