[package]
name = "heliosphere"
version = "0.1.0"
authors = ["3A Technologies Ltd", "alianse777"]
edition = "2021"
description = "Rust-idiomatic Tron API client library"
readme = "README.md"
license = "MIT"
keywords = ["tron", "blockchain", "api", "client", "cryptocurrency"]
categories = ["api-bindings"]
repository = "https://github.com/3A-Technologies/heliosphere"

[dependencies]
heliosphere-core = "0.1.0"
heliosphere-signer = "0.1.0"
hex = "0.4.3"
reqwest = { version = "0.11.13", features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
thiserror = "1.0.38"
tokio = { version = "1.24.1", default-features = false, features = ["time"] }

[dev-dependencies]
ethabi = "18.0.0"
rand = "0.8.5"
tokio = { version = "1.24.1", features = ["rt-multi-thread", "macros"] }
